contrast correction on preston page

--- a/weather/css/small.css
+++ b/weather/css/small.css
@@ -1,7 +1,7 @@
 :root {
     --primary-color: #1C6EA9;
     --secondary-color: #AAE8FF;
-    --accent-1-color: #AA141A;
+    --accent-1-color: #990000;
     --accent-2-color: #606060;
 }
 
@@ -266,7 +266,6 @@ article p {
     color: white;
     padding-top: 5px;
     padding-bottom: 5px;
-    font-weight: bold;
 }
 
 .footer-bottom-section a {
